[package]
name = "duyet-exif"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
exif = { package = "kamadak-exif", version = "0.6" }

[dev-dependencies]
wasm-bindgen-test.workspace = true
